# curso-flask_Web_Delivery

./: -- SQLite.sql  .gitignore  todo_2022-05-24_11 36.xml
delivery/: Makefile  example.secrets.toml  pyproject.toml  settings.toml
delivery/delivery/: app.py  config.py
delivery/delivery/ext/: admin.py  cli.py  config.py
delivery/delivery/ext/auth/: commands.py  controller.py  form.py  models.py  node_ba782bf3964d1.tmp
delivery/delivery/ext/site/: main.py
delivery/delivery/templates/: base.html  userform.html
delivery/scripts/: vertabelo_flask_sqlalchemy.py
delivery/scripts/comando do codigo/: codefoods.xml
delivery/session/: app.py
tipos_configs/: app.py  config.py  settings.py
